arrumei uns erros na pagina fragileCharms

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
             <div class="article-box">
 
-                <div class="content-top">
+                <div class="content-main">
                     <div class="imagem">
                         <figure>
                             <img src="img/sly.png" alt="sly">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-                <div class="content-bot">
+                <div class="content-main">
                     <div class="imagem">
                         <figure>
                             <img src="img/legEater.webp" alt="legEater">
@@ -75,6 +75,25 @@
                             <br><br>
                             Leg Eater is found in a camp in the Fungal Wastes, near the entrance to the Forgotten
                             Crossroads. When first meeting him, he offers to show the Knight "something nice".
+                        </p>
+                    </div>
+                </div>
+
+                <div class="content-main">
+                    <div class="imagem">
+                        <figure>
+                            <img src="img/Salubra.webp" alt="salumbra">
+                            <figcaption>Salumbra</figcaption>
+                        </figure>
+                    </div>
+                    <div class="text">
+                        <hgroup>
+                            <h2>Merchant</h2>
+                            <h3>loves charms(and the buyers WAY TOO MUCH)</h3>
+                        </hgroup>
+                        <p>Salubra's shop is located above the abandoned village at the bottom of the Forgotten Crossroads, near the Blue Lake. She is knowledgeable in the craft and use of Charms and eagerly shares them with others for Geo. She seems to be under the delusion that the village outside her house is still lively and is unaware of the Kingdom's demise. She is also very fond of the looks of the Knight.
+                            <br><br>
+                            Accessing Salubra's shop requires defeating the Gruz Mother boss, and then at least acquiring the Mothwing Cloak or Mantis Claw, or Nail-bouncing on a Shade. Alternatively, she can be reached by crossing the Blue Lake in the Resting Grounds.
                         </p>
                     </div>
                 </div>
