--- a/fragileCharms.html
+++ b/fragileCharms.html
@@ -18,9 +18,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">Charms</a></li>
-                    <li><a href="/fragileCharms.html" class="current">Fragile charms</a></li>
+                    <li><a href="fragileCharms.html" class="current">Fragile charms</a></li>
                     <li><a href="">Fortify your charms</a></li>
                     <li><a href="about.html">About me</a></li>
                 </ul>
@@ -35,7 +35,7 @@
                     <div class="imagem">
                         <figure>
                             <img src="img/fragile-heart.webp" alt="swarm">
-                            <figcaption>Gathering Swarm</figcaption>
+                            <figcaption>Fragile Heart</figcaption>
                         </figure>
                     </div>
                     <div class="text">
@@ -62,7 +62,7 @@
                     <div class="imagem">
                         <figure>
                             <img src="img/fragile-strength.webp" alt="swarm">
-                            <figcaption>Thorns of Agony</figcaption>
+                            <figcaption>Fragile Strenght</figcaption>
                         </figure>
                     </div>
                     <div class="text">
