arrumei os links do fragilecharm

--- a/fragileCharms.html
+++ b/fragileCharms.html
@@ -18,9 +18,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">Charms</a></li>
-                    <li><a href="/fragileCharms.html" class="current">Fragile charms</a></li>
+                    <li><a href="fragileCharms.html" class="current">Fragile charms</a></li>
                     <li><a href="">Fortify your charms</a></li>
                     <li><a href="about.html">About me</a></li>
                 </ul>
