arrumando a pagina fragileCharms

--- a/fragileCharms.html
+++ b/fragileCharms.html
@@ -34,7 +34,7 @@
                 <div class="content-top">
                     <div class="imagem">
                         <figure>
-                            <img src="img/fragile-heart.webp" alt="swarm">
+                            <img src="img/fragile-heart.webp" alt="frag-heart">
                             <figcaption>Fragile Heart</figcaption>
                         </figure>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="content-bot">
                     <div class="imagem">
                         <figure>
-                            <img src="img/fragile-strength.webp" alt="swarm">
+                            <img src="img/fragile-strength.webp" alt="frag-strg">
                             <figcaption>Fragile Strenght</figcaption>
                         </figure>
                     </div>
